--- a/views/home.html
+++ b/views/home.html
@@ -166,14 +166,14 @@
             <article>
             <i class="fas fa-gift"></i>
             <p><b>Envio gratis desde los $2500</b></p>
-                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de
                     productos. Es un beneficio de Mercado Puntos.</p>
             </article>
             <article>
             <i class="fas fa-user-shield"></i>
             <p><b>Seguridad de principio a fin</b></p>
                 <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                    porque estás siempre protegid@.</p>
+                    porque estás siempre protegido.</p>
             </article>
         </section>
 
